# flower-work

./: .env
backend/: Cargo.toml
backend/src/: main.rs
my-app/: package-lock.json  package.json
my-app/src/app/: page.tsx
my-app/src/components/: AttachmentComponent.tsx
