[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
